# M2INFO-SIA-Raytracer

./: .gitmodules  CMakeLists.txt  README.md  chitest.m
ext/: CMakeLists.txt
ext/tinyobjloader/tests/: acutest.h
src/: main.cpp  warptest.cpp
src/accelerators/: bbox.h  bvh.cpp  bvh.h
src/bsdfs/: dielectric.cpp  diffuse.cpp  microfacet.cpp  mirror.cpp  phong.cpp
src/core/: bitmap.cpp  bitmap.h  block.cpp  block.h  bsdf.h  camera.h  color.h  common.cpp  common.h  dpdf.h  frame.h  integrator.h  light.h  lightProbe.h  object.h  parser.cpp  parser.h  perspective.cpp  proplist.h  ray.h  rfilter.cpp  rfilter.h  sampler.h  scene.cpp  scene.h  shape.h  texture.h  timer.h  trackball.h  transform.h  vector.h  viewer.cpp  viewer.h  warp.cpp  warp.h
src/integrators/: ao.cpp  direct.cpp  flat.cpp  normals.cpp  texcoords.cpp  whitted.cpp
src/lights/: areaLight.cpp  areaLight.h  directionalLight.cpp  infiniteLight.cpp  pointLight.cpp
src/samplers/: independent.cpp  stratified.cpp
src/shapes/: disk.cpp  disk.h  mesh.cpp  mesh.h  quad.cpp  quad.h  shape.cpp  sphere.cpp  sphere.h
src/tests/: chi2test.cpp  ttest.cpp
